--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
   --time-slots: 10;
   --time-slots-fr: 10fr;
   --gap: 8px;
+  --left-bar: 70px;
+
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
@@ -20,6 +22,10 @@ body {
   transition: background 0.25s ease;
 }
 
+body * {
+  box-sizing: border-box;
+}
+
 body.dark {
   --background: rgb(34, 34, 34);
   --background-fade: rgba(34, 34, 34, 0.8);
@@ -34,13 +40,19 @@ body.dark .class {
 
 .container {
   display: grid;
-  grid-template: 0.5fr var(--time-slots-fr) / 0.5fr 7fr;
+  grid-template: auto var(--time-slots-fr) / auto 7fr;
+
+  width: 100vw;
+  height: 100vh;
+  overflow-x: scroll;
 }
 
 .options {
   position: sticky;
   top: 0;
-  z-index: 3;
+  left: 0;
+  width: var(--left-bar);
+  z-index: 20;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -105,11 +117,11 @@ body.dark svg.dim .switch {
 .days {
   position: sticky;
   top: 0;
-  z-index: 3;
+  z-index: 10;
   grid-row: 1;
   grid-column: 2;
   display: grid;
-  grid-template-columns: repeat(3, 1fr) 2fr repeat(3, 1fr);
+  grid-template-columns: 2fr repeat(6, 1fr);
   align-items: center;
   padding: var(--gap);
   grid-gap: var(--gap);
@@ -120,33 +132,68 @@ body.dark svg.dim .switch {
   transition: background 0.25s ease;
 }
 
+.days svg {
+  position: absolute;
+  height: 24px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.days svg.prev {
+  left: 0;
+}
+
+.days svg.next {
+  right: 0;
+
+  transform: rotateZ(180deg);
+}
+
+.days svg path {
+  fill: var(--text);
+
+  transition: fill 0.25s ease;
+}
+
 .days p {
   color: var(--text);
 
   transition: color 0.25s ease;
 }
 
-.days .weekend {
+.days .date {
+  font-size: 12px;
+  font-weight: normal;
+}
+
+.days .weekend p {
   opacity: 0.5;
 }
 
-.days .today {
+.days .today p {
   color: var(--now);
 
   transition: color 0.25s ease;
 }
 
 .times {
+  position: sticky;
+  left: 0;
+  width: var(--left-bar);
+  z-index: 10;
   grid-row: 2;
   grid-column: 1;
   display: grid;
   grid-template-rows: repeat(var(--time-slots), 1fr);
   padding: var(--gap);
   grid-gap: var(--gap);
-  color: rgb(40, 40, 40);
+  background: var(--background-fade);
+
+  transition: background 0.25s ease;
 }
 
 .times p {
+  margin: 0;
   color: var(--text);
   opacity: 0.75;
   transition: color 0.25s ease, opacity 0.25s ease, font-weight 0.25s ease;
@@ -159,7 +206,7 @@ body.dark svg.dim .switch {
 }
 
 p {
-  margin: 8px;
+  margin: 0;
   text-align: center;
 }
 
@@ -168,16 +215,14 @@ p {
   grid-row: 2;
   grid-column: 2; 
   display: grid;
-  grid-template-columns: repeat(3, 1fr) 2fr repeat(3, 1fr);
+  grid-template-columns: 2fr repeat(6, 1fr);
   padding: var(--gap);
   grid-gap: var(--gap);
-
-  transition: grid-template-columns 0.25s ease;
 }
 
 .classes .line {
   position: absolute;
-  left: 0;
+  left: -100px;
   right: 0;
   height: 1px;
   z-index: 1;
@@ -211,6 +256,7 @@ p {
 }
 
 .classes .class {
+  padding: var(--gap);
   margin: 0;
   border-radius: var(--gap);
   background: rgb(240, 240, 240);
@@ -220,7 +266,7 @@ p {
 }
 
 .class.now {
-  transform: scale(1.1);
+  transform: scale(1.04);
   z-index: 2;
   opacity: 1;
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25);
@@ -235,16 +281,26 @@ p {
   transition: color 0.25s ease;
 }
 
+.class .location {
+  font-size: 12px;
+  text-align: left;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  margin-bottom: var(--gap);
+}
+
 .class .code {
   font-weight: bold;
   font-size: 20px;
+  margin-bottom: var(--gap);
 }
 
 .class .name {
-  font-size: 16px;
+  font-size: 14px;
 }
 
-.class .type, .class .location {
+.class .type {
   font-size: 14px;
   overflow: hidden;
   white-space: nowrap;
@@ -273,63 +329,25 @@ input, button {
   transition: background 0.25s ease;
 }
 
-@media (min-width: 640px) and (max-width: 939px) {
-  .days p {
-    display: none;
-    visibility: hidden;
-  }
-
-  .days p.today, .days p.yesterday, .days p.tomorrow {
-    display: block;
-    visibility: visible;
-  }
-
-  .classes .day {
-    display: none;
-    visibility: hidden;
-  }
-
-  .classes .day.today, .classes .day.yesterday, .classes .day.tomorrow {
-    display: grid;
-    visibility: visible;
+@media (max-width: 939px) {
+  :root {
+    --show: 2;
+    --width-one: calc((100vw - var(--left-bar) - (var(--show) + 2) * var(--gap)) / var(--show));
+    --show-one: repeat(7, var(--width-one));
   }
 
   .days {
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: var(--show-one);
   }
-
+  
   .classes {
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: var(--show-one);
   }
 }
 
 @media (max-width: 639px) {
-  .days p {
-    display: none;
-    visibility: hidden;
-  }
-
-  .days p.today {
-    display: block;
-    visibility: visible;
-  }
-
-  .classes .day {
-    display: none;
-    visibility: hidden;
-  }
-
-  .classes .day.today {
-    display: grid;
-    visibility: visible;
-  }
-
-  .days {
-    grid-template-columns: 1fr;
-  }
-
-  .classes {
-    grid-template-columns: 1fr;
+  :root {
+    --show: 1;
   }
 
   .class.now {
