--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   --text: #222;
   --class-text: #222;
   --now: red;
+  --hour: #eee;
 
   background: var(--background);
 
@@ -32,6 +33,7 @@ body.dark {
   --text: #aaa;
   --class-text: #888;
   --now: rgb(140, 0, 0);
+  --hour: #282828;
 }
 
 body.dark .class {
@@ -185,8 +187,6 @@ body.dark svg.dim .switch {
   grid-column: 1;
   display: grid;
   grid-template-rows: repeat(var(--time-slots), 1fr);
-  padding: var(--gap);
-  grid-gap: var(--gap);
   background: var(--background-fade);
 
   transition: background 0.25s ease;
@@ -216,8 +216,8 @@ p {
   grid-column: 2; 
   display: grid;
   grid-template-columns: 2fr repeat(6, 1fr);
-  padding: var(--gap);
-  grid-gap: var(--gap);
+
+  transition: background 0.25s ease;
 }
 
 .classes .line {
@@ -227,6 +227,17 @@ p {
   height: 1px;
   z-index: 1;
   background: var(--now);
+
+  transition: background 0.25s ease;
+}
+
+.classes .hour {
+  position: absolute;
+  left: -100px;
+  right: 0;
+  height: 1px;
+  z-index: -1;
+  background: var(--hour);
 
   transition: background 0.25s ease;
 }
@@ -245,8 +256,7 @@ p {
   "t1600"
   "t1700"
   "t1800";
-  grid-gap: var(--gap);
-  opacity: 0.5;
+  opacity: 0.75;
   width: 100%;
   transition: opacity 0.25s ease, transform 0.25s ease, box-shadow 0.25s ease;
 }
@@ -256,12 +266,12 @@ p {
 }
 
 .classes .class {
+  margin: calc(var(--gap) * 0.5);
   padding: var(--gap);
-  margin: 0;
   border-radius: var(--gap);
   background: rgb(240, 240, 240);
   overflow: hidden;
-  opacity: 0.5;
+  opacity: 0.75;
   transition: transform 0.25s ease, background 0.25s ease;
 }
 
