--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   --time-slots-fr: 10fr;
   --gap: 8px;
   --left-bar: 70px;
+  --size: repeat(7, 1fr);
 
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
@@ -152,7 +153,7 @@ body.dark svg.dim .switch {
   grid-row: 1;
   grid-column: 2;
   display: grid;
-  grid-template-columns: 2fr repeat(6, 1fr);
+  grid-template-columns: var(--size);
   align-items: center;
   padding: var(--gap) 0;
   background: var(--background-fade);
@@ -244,7 +245,7 @@ p {
   grid-row: 2;
   grid-column: 2; 
   display: grid;
-  grid-template-columns: 2fr repeat(6, 1fr);
+  grid-template-columns: var(--size);
 
   transition: background 0.25s ease;
 }
