--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
   --left-bar: 70px;
   --size: repeat(7, 1fr);
 
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: var(--font);
 }
 
 body {
@@ -35,6 +36,19 @@ body.dark {
   --class-text: #888;
   --now: rgb(140, 0, 0);
   --hour: #282828;
+}
+
+body.noInfo .container {
+  display: none;
+}
+
+body.noInfo form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  font-size: 24px;
 }
 
 body.dark .class {
@@ -133,7 +147,7 @@ body.dark .options svg.dim {
 
 .options svg.dim .switch {
   fill: #fff;
-  
+
   transition: fill 0.25s ease;
 }
 
@@ -243,7 +257,7 @@ p {
 .classes {
   position: relative;
   grid-row: 2;
-  grid-column: 2; 
+  grid-column: 2;
   display: grid;
   grid-template-columns: var(--size);
 
@@ -275,7 +289,7 @@ p {
 .classes .day {
   display: grid;
   grid-template-rows: repeat(var(--time-slots), 1fr);
-  grid-template-areas: 
+  grid-template-areas:
   "t900"
   "t1000"
   "t1100"
@@ -373,23 +387,46 @@ p {
 }
 
 form {
-  margin: 8px;
+  padding: 2em;
+}
+
+form a {
+  color: var(--now);
 }
 
 form input, form button {
-  max-width: 50%;
+  flex: 1;
 }
 
 form, input, button {
+  font-family: var(--font);
   color: var(--text);
 
   transition: color 0.25s ease;
 }
 
-input, button {
+#content {
+  max-width: 100%;
+  display: flex;
+}
+
+input {
+  font-size: 1em;
   background: var(--background);
   border: none;
   border-bottom: solid 2px var(--text);
+  margin-right: 1em;
+
+  transition: background 0.25s ease;
+}
+
+button {
+  cursor: pointer;
+  font-size: 1em;
+  background: var(--text);
+  color: var(--background);
+  border: none;
+  padding: 0.2em 0.5em;
 
   transition: background 0.25s ease;
 }
@@ -404,7 +441,7 @@ input, button {
   .days {
     grid-template-columns: var(--show);
   }
-  
+
   .classes {
     grid-template-columns: var(--show);
   }
@@ -417,5 +454,19 @@ input, button {
 
   .class.now {
     transform: none;
+  }
+
+  body.noInfo form {
+    font-size: 18px;
+  }
+
+  input {
+    margin-right: 0;
+    margin-bottom: 1em;
+  }
+
+  #content {
+    /* width: 100%; */
+    flex-direction: column;
   }
 }
