--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,11 @@ body {
   --now: rgb(201, 54, 54);
   --hour: #eee;
 
+  --op-light: 1;
+  --op-dark: 0;
+  --show-big: block;
+  --show-small: none;
+
   background: var(--background);
 
   transition: background 0.25s ease;
@@ -38,20 +43,21 @@ body.dark {
   --class-text: #aaa;
   --now: rgb(240, 105, 87);
   --hour: #282828;
+
+  --op-light: 0;
+  --op-dark: 1;
 }
 
-body.noInfo .container {
-  display: none;
-}
-
-body.noInfo form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  font-size: 24px;
-}
+/* @media (prefers-color-scheme: dark) {
+  body {
+    --background: #222222;
+    --background-fade: rgba(34, 34, 34, 0.8);
+    --text: #ccc;
+    --class-text: #aaa;
+    --now: rgb(240, 105, 87);
+    --hour: #282828;
+  }
+} */
 
 body.dark .class {
   background: #111 !important;
@@ -405,7 +411,67 @@ p {
   font-size: 12px;
 }
 
+/* FORM STYLING */
+
+body.noInfo .container {
+  display: none;
+}
+
+body.noInfo form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+}
+
+picture {
+  position: relative;
+  display: flex;
+  justify-content: center;
+
+  padding: 1rem;
+
+  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+  -webkit-mask-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 1),
+    rgba(0, 0, 0, 0)
+  );
+
+  width: 100%;
+  height: 150px;
+  overflow: hidden;
+}
+
+picture img {
+  max-width: 100%;
+  position: absolute;
+}
+
+img.light,
+img.dark {
+  transition: opacity 0.25s ease;
+}
+
+img.light {
+  opacity: var(--op-light);
+}
+
+img.dark {
+  opacity: var(--op-dark);
+}
+
+img.big {
+  display: var(--show-big);
+}
+
+img.small {
+  display: var(--show-small);
+}
+
 form {
+  display: none;
   padding: 2em;
 }
 
@@ -520,6 +586,11 @@ button {
 @media (max-width: 639px) {
   :root {
     --show-num: 1;
+  }
+
+  body {
+    --show-big: none;
+    --show-small: block;
   }
 
   .class.now {
